tests/cmp/dc-label-wrong-order.golden
Parse Error:
tests/cmp/dc-label-wrong-order.trp:1:27: parse error
  1 | let val x = 60 raisedTo `<#root-integrity; #null-confidentiality>`
    |                           ^
  unexpected '#root-integrity'
  expected ';'

