tests/cmp/dc-label-wrong-order.trp
let val x = 60 raisedTo `<#root-integrity; #null-confidentiality>`
in printWithLabels x
end